<resources>
    <string name="app_name">TwoPaneLayoutNav Sample</string>
    <string name="navigates_to">navigates to: </string>
    <string name="image_description">Graphic showing the color and pane of the next destination</string>
    <string name="first_dest_text">Destination 1: TwoPaneLayout is a UI component for Jetpack Compose, which contains the layouts that help you create UI for dual-screen, foldable, and large-screen devices. TwoPaneLayout provides a two-pane layout for use at the top level of a UI. The component will place two panes side-by-side on dual-screen, foldable, and large-screen devices and one pane only on regular single-screen devices. The two panes can be horizontal or vertical, based on the orientation of the device, unless paneMode is configured.</string>
    <string name="second_dest_text">Destination 2: The element layout is based on the order, which means the first element will be placed in the first pane and the second element will be placed in the second pane. The TwoPaneLayout is able to assign children widths according to their weights provided using the TwoPaneScope.weight modifier. When none of its children have weights, the first child element will be prioritized when the app is running on a regular single-screen device, or when foldable and dual-screen devices become folded or unspanned. If the app is spanned or unfolded on foldable and dual-screen, or large-screen devices, the two elements will be laid out equally to take all the display area.</string>
    <string name="third_dest_text">Destination 3: When the app is spanned across a vertical hinge or fold, or when the width is larger than height of screen on large-screen device, pane 1 will be placed on the left, while pane 2 will be on the right. If the device rotates, the app is spanned across a horizontal hinge or fold, or the width is smaller than the height of screen on large-screen device, pane 1 will be placed on the top and pane 2 will be on the bottom.</string>
    <string name="fourth_dest_text">Destination 4: Please refer to TwoPaneLayout on Microsoft Dual-screen document for more details. About some common use case for the two panes, please check out user interface patterns.</string>
    <string name="pane1">- pane 1</string>
    <string name="pane2">- pane 2</string>
</resources>